...
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_listing">ListingActivity</string>

    <!--Title Fragments-->
    <string name="title_fragment_in_auction">In Auction</string>
    <string name="title_fragment_my_bids">My Bids</string>
    <string name="title_fragment_procured">Procured</string>
    <string name="title_fragment_negotiating">Negotiating</string>
    <string name="title_fragment_more">More</string>

    <!--TextView Text-->
    <string name="in_auction">In Auction</string>
    <string name="my_bids">My Bids</string>
    <string name="negotiating">Negotiating</string>
...
